# claude-code-learning

./: README.md
notes/: architecture_analysis.md  context_engineering.md  core_algorithms.md  memory_management.md  python_implementation_guide.md  research_plan.md
python_context_manager/: IMPLEMENTATION_PLAN.md  PHASE6_COMPLETION_REPORT.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py
python_context_manager/docs/: USER_GUIDE.md  enhanced_context_system.md  enhanced_memory_system.md  tool_system.md
python_context_manager/docs/debug/: PHASE1_DEBUG.md
python_context_manager/examples/: README.md  __init__.py  advanced_features.py  basic_usage.py  custom_tools.py  main_example.py  performance_demo.py
python_context_manager/src/context_manager/: __init__.py
python_context_manager/src/context_manager/compression/: __init__.py  compression_manager.py  context_compressor.py  priority_manager.py  token_manager.py
python_context_manager/src/context_manager/core/: __init__.py  async_operations.py  config.py  config_validation.py  context_manager.py  enhanced_context_manager.py  health_checker.py  memory_manager.py  models.py  performance_monitor.py  state_controller.py  tool_manager.py  tool_system.py
python_context_manager/src/context_manager/memory/: __init__.py
python_context_manager/src/context_manager/storage/: __init__.py  cache_layer.py  disk_layer.py  hierarchical_manager.py  storage_base.py
python_context_manager/src/context_manager/tools/: __init__.py
python_context_manager/src/context_manager/utils/: __init__.py  error_handling.py  helpers.py  logging.py
python_context_manager/tests/test_core/: test_config.py  test_context_manager_enhanced.py  test_memory_manager_enhanced.py  test_models.py  test_tool_system.py
python_context_manager/tests/test_integration/: test_enhanced_system.py
python_context_manager/tests/test_storage/: test_storage_layers.py
python_context_manager/tests/test_utils/: test_error_handling.py  test_helpers.py  test_logging.py
